--- a/frontend/package.json
+++ b/frontend/package.json
@@ -37,6 +37,7 @@
     "react-dom": "19.2.3",
     "react-redux": "^9.2.0",
     "react-resizable-panels": "^2.1.7",
+    "sonner": "^2.0.7",
     "tailwind-merge": "^3.4.0"
   },
   "devDependencies": {
